fix margin collapsing on .main, body

--- a/src/sass/pages/_shared.sass
+++ b/src/sass/pages/_shared.sass
@@ -27,6 +27,7 @@ body
 
 
 .main
+  overflow: auto
   +respond("desktop")
     // Padding to accomodate size of .header fixed on left side of screen
     padding-left: $navwidth
